ported Edge and added typemap for std::list; includes bug fixes and removes java reference comparisons in spatialOrganization